tests/paczka1/small_fuzzy/70326477.err
Error in line 6: l2XVPTD S388 39,31
Error in line 10: S9*5 A973 5,8
Error in line 11: S965 A973 14,9
Error in line 9: 90ockuqT S388 75,2
